--- a/clients/default/package.json
+++ b/clients/default/package.json
@@ -12,5 +12,8 @@
   "author": "Nick Mitchell",
   "license": "Apache-2.0",
   "dependencies": {},
-  "main": "node_modules/@kui-shell/core/main/main.js"
+  "main": "node_modules/@kui-shell/core/main/main.js",
+  "kui": {
+    "readme": "../../README.md"
+  }
 }
