--- a/plugins/plugin-k8s/package.json
+++ b/plugins/plugin-k8s/package.json
@@ -30,6 +30,7 @@
     "fs-extra": "^7.0.1",
     "js-yaml": "^3.12.1",
     "needle": "^2.2.4",
+    "parse-duration": "^0.1.1",
     "semver": "^5.6.0",
     "tmp": "0.0.33"
   },
