--- a/plugins/plugin-editor/package.json
+++ b/plugins/plugin-editor/package.json
@@ -29,6 +29,8 @@
     "postpack": "for i in dist/*; do if [ -d $i ]; then for j in $i/*; do rm -rf ./`basename $i`/`basename $j`; done; else rm -rf ./`basename $i`; fi; done && rm -rf dist"
   },
   "dependencies": {
+    "debug": "^4.1.1",
+    "expand-home-dir": "0.0.3",
     "monaco-editor": "^0.14.3",
     "tmp": "0.0.33"
   },
