--- a/packages/kui-builder/package.json
+++ b/packages/kui-builder/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@kui-shell/builder",
-  "version": "0.14.0",
+  "version": "0.14.3",
   "description": "Kui plugin development helpers",
   "license": "Apache-2.0",
   "author": "Nick Mitchell",
@@ -38,8 +38,8 @@
     "@types/swagger-schema-official": "^2.0.14",
     "@types/webdriverio": "^4.13.1",
     "colors": "^1.3.3",
-    "electron": "^4.0.5",
-    "electron-download": "^4.1.1",
+    "debug": "^4.1.1",
+    "electron": "^4.0.6",
     "fs-extra": "^7.0.1",
     "spectron": "^5.0.0",
     "terser": "^3.16.1",
