--- a/.travis.yml
+++ b/.travis.yml
@@ -45,12 +45,18 @@ env:
     - LOCAL_OPENWHISK=true # allows e.g. openwhisk/src/test/openwhisk1/headless to avoid trying to host set <not-local>
     - IGNORE_CERTS=true # apache-composer needs this, because it doesn't obey INSECURE_SSL in wskprops
     - PATH=bin:$PATH
-    - NO_MAC_DMG_INSTALLER=true # we can't build macOS DMG files in travis :(
+    - NO_MAC_DMG_INSTALLER=`[[ $TRAVIS_OS_NAME != osx ]] && echo true` # we can't build macOS DMG files in linux travis :(
     - WINDOW_WIDTH=1400                   # ! important ! so that clicks don't fail due to elements being off-viewport
     - WINDOW_HEIGHT=1050                  # ! ibid !
-    - TEST_FROM_BUILD="${TRAVIS_BUILD_DIR}/clients/default/dist/electron/Kui-linux-x64/Kui" # test against a specific dist build
+    - TEST_FROM_BUILD="${TRAVIS_BUILD_DIR}/clients/default/dist/electron/$(case $TRAVIS_OS_NAME in 'linux' ) echo Kui-linux-x64/Kui;; 'osx' ) echo Kui-darwin-x64/Kui.app/Contents/MacOS/Kui;; esac)" # test against a specific dist build
     - BUILD_ENV=production                # please note: used in dist/electron/build.sh with npm prune --production
 
+matrix:
+  include:
+  - os: osx
+    if: repo = ibm/kui
+
+before_install: echo $TRAVIS_REPO_SLUG
 install: ./tools/travis/test/install.sh
 script: ./tools/travis/test/script.sh
 after_success: ./tools/travis/publishers/cos.sh
