--- a/.travis.yml
+++ b/.travis.yml
@@ -10,6 +10,7 @@ env:
     - SCRIPTS="lint.sh"
       LAYERS="core bash-like core-support field-installed-plugins editor"
       MOCHA_TARGETS="webpack electron"
+      KUI_USE_PROXY=false
       NEEDS_IBMCLOUD_CLI=true # see plugins/plugin-bash-like/src/test/bash-like/bash-like.ts
 
     - LAYERS="openwhisk1 openwhisk3 grid"
