--- a/plugins/plugin-bash-like/package.json
+++ b/plugins/plugin-bash-like/package.json
@@ -31,7 +31,10 @@
     "diff2html": "^2.7.0",
     "expand-home-dir": "0.0.3",
     "marked": "^0.6.1",
-    "shelljs": "^0.8.3"
+    "node-pty": "^0.8.1",
+    "shelljs": "^0.8.3",
+    "ws": "^6.2.1",
+    "xterm": "^3.12.0"
   },
   "publishConfig": {
     "access": "public"
